--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -13,6 +13,7 @@
     "sourceApiVersion": "43.0",
     "packageAliases": {
         "Expense": "0Ho4P000000k9gISAQ",
-        "Expense@0.1.0-1": "04t4P000000qoT8QAI"
+        "Expense@0.1.0-1": "04t4P000000qoT8QAI",
+        "Expense@0.1.0-2": "04t4P000000qoc2QAA"
     }
 }
